--- a/src/sass/basic.scss
+++ b/src/sass/basic.scss
@@ -4,7 +4,7 @@ body {
 }
 
 @media screen and (max-width: 768px){
-  ::-webkit-scrollbar {
+  body::-webkit-scrollbar {
     -webkit-appearance: none;
   }
 }
